<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactWithUs">

    <EditText
        android:id="@+id/nameUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/sendUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="#1E88E5"
        android:text="@string/send"
        app:layout_constraintEnd_toEndOf="@+id/messageUser"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/messageUser"
        app:layout_constraintTop_toBottomOf="@+id/messageUser" />


    <EditText
        android:id="@+id/messageUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:hint="@string/message"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/nameUser"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nameUser"
        app:layout_constraintTop_toBottomOf="@+id/nameUser" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="250dp"
        android:layout_height="118dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/sedgwickavedisplay_regular"
        android:gravity="center"
        android:text="@string/contacta"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
