...
    <string name="creacion">Creación de Ruta</string>


    <string name="errorCorreo">Error al enviar el correo</string>
    <string name="correoEnviado">Correo Enviado</string>
    <string name="correoEnviadoCorrectamente">Tu mensaje ha sido enviado con éxito!</string>
    <string name="enviandoCorreo">Enviando Correo</string>
    <string name="esperarEnviandoCorreo">Por favor, espere mientras se envía el correo...</string>
    <string name="errorImagen">Error al obtener la imagen</string>
    <string name="imagenNoSeleccionada">Imagen no seleccionada</string>
    <string name="hacerFoto">Hacer Foto</string>
    <string name="seleccionarDeGaleria">Seleccionar de la galería</string>
    <string name="elegirOpcion">Elige una opción</string>
...
