<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".EditInfoUser">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="196dp"
            android:layout_height="147dp"
            android:layout_gravity="center"
            android:fontFamily="@font/sedgwickavedisplay_regular"
            android:gravity="center"
            android:text="@string/editarUsuario"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textViewNombre"
            android:layout_width="132dp"
            android:layout_height="36dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="44dp"
            android:text="@string/nombre"
            android:textSize="50px"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <EditText
            android:id="@+id/codigoPostal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/codigoPostal"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCodigoPostal"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="200dp"
            android:layout_height="36dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="30dp"
            android:text="@string/email"
            android:textSize="50px"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/apellido"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textViewCodigoPostal"
            android:layout_width="132dp"
            android:layout_height="36dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="30dp"
            android:text="@string/codigoPostal"
            android:textSize="50px"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ciudad" />

        <TextView
            android:id="@+id/textViewApellido"
            android:layout_width="132dp"
            android:layout_height="36dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="30dp"
            android:text="@string/apellidos"
            android:textSize="50px"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombre"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textViewCiudad"
            android:layout_width="200dp"
            android:layout_height="36dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="30dp"
            android:text="@string/ciudad"
            android:textSize="50px"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/ciudad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/ciudad"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCiudad"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/apellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/apellidos"
            android:inputType="textCapWords"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewApellido"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textCapWords"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNombre"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/boton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:backgroundTint="#1E88E5"
            android:text="@string/seleccionarFoto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.171"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/codigoPostal" />

        <Button
            android:id="@+id/borrarFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:backgroundTint="#1E88E5"
            android:text="@string/borrarFoto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.271"
            app:layout_constraintStart_toEndOf="@+id/boton"
            app:layout_constraintTop_toBottomOf="@+id/codigoPostal" />

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/boton" />

        <Button
            android:id="@+id/botonGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="#1E88E5"
            android:text="@string/guardar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagen" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>